fixing spacing

--- a/assets/css/writing-portfolio.scss
+++ b/assets/css/writing-portfolio.scss
@@ -298,7 +298,6 @@ footer {
     .desc-col {
       padding:0px;
       p {
-        right:100px;
         bottom:0px;
       }
     }
